# dnssd

./: CMakeLists.txt  README.md  dnssd.sln
cmake/: DNSSDConfig.cmake.in
src/: CommonServices.h  dllmain.c  dnssd.vcxproj  dnssd.vcxproj.filters
test/: dns-sd.c  dns-sd.vcxproj  dns-sd.vcxproj.filters
test-cmake/: CMakeLists.txt  main.cpp
